force-app/main/default/objects/Ciclo_prepa__c/fields/Fecha_Realizacion_EstSocioeconomico__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Realizacion_EstSocioeconomico__c</fullName>
    <description>Fecha Realización Est. Socioeconomico</description>
    <label>Fecha Realización Est. Socioeconomico</label>
    <type>Date</type>
</CustomField>