force-app/main/default/objects/Ciclo_prepa__c/fields/Fecha_VigDescuento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_VigDescuento__c</fullName>
    <label>Fecha de Vigencia Descuento</label>
    <type>Date</type>
</CustomField>