force-app/main/default/objects/Ciclo_prepa__c/fields/FechaExamenAdmision__c.field-meta.xml
<CustomField>
    <fullName>FechaExamenAdmision__c</fullName>
    <formula>Examen_Admision__r.FechaExamen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Examen Admision</label>
    <type>DateTime</type>
</CustomField>