force-app/main/default/objects/Ciclo_prepa__c/fields/FechaExamenUbicacion1__c.field-meta.xml
<CustomField>
    <fullName>FechaExamenUbicacion1__c</fullName>
    <label>Fecha examen ubicación 1</label>
    <type>DateTime</type>
</CustomField>