force-app/main/default/objects/Ciclo_prepa__c/fields/FechaExamenUbicacion2__c.field-meta.xml
<CustomField>
    <fullName>FechaExamenUbicacion2__c</fullName>
    <label>Fecha examen ubicación 2</label>
    <type>DateTime</type>
</CustomField>