force-app/main/default/objects/Ciclo_prepa__c/fields/FechaExamenUbicacion3__c.field-meta.xml
<CustomField>
    <fullName>FechaExamenUbicacion3__c</fullName>
    <label>Fecha examen ubicación 3</label>
    <type>DateTime</type>
</CustomField>