force-app/main/default/objects/Ciclo_prepa__c/fields/FechaPago1__c.field-meta.xml
<CustomField>
    <fullName>FechaPago1__c</fullName>
    <label>Fecha pago 1</label>
    <type>Date</type>
</CustomField>