force-app/main/default/objects/Ciclo_prepa__c/fields/FechaPago2__c.field-meta.xml
<CustomField>
    <fullName>FechaPago2__c</fullName>
    <label>Fecha pago 2</label>
    <type>Date</type>
</CustomField>