force-app/main/default/objects/Ciclo_prepa__c/fields/FechaPago3__c.field-meta.xml
<CustomField>
    <fullName>FechaPago3__c</fullName>
    <label>Fecha pago 3</label>
    <type>Date</type>
</CustomField>