force-app/main/default/objects/Ciclo_prepa__c/fields/FechaSolicitudBecaOrdinaria__c.field-meta.xml
<CustomField>
    <fullName>FechaSolicitudBecaOrdinaria__c</fullName>
    <label>Fecha de Solicitud de Beca Ordinaria</label>
    <type>Date</type>
</CustomField>