force-app/main/default/objects/Ciclo_prepa__c/fields/FormaPago__c.field-meta.xml
<CustomField>
    <fullName>FormaPago__c</fullName>
    <label>Forma de Pago</label>
    <length>2</length>
    <type>Text</type>
</CustomField>