force-app/main/default/objects/Ciclo_prepa__c/fields/ID_Unisoft__c.field-meta.xml
<CustomField>
    <fullName>ID_Unisoft__c</fullName>
    <formula>Persona__r.NumeroUnico__c</formula>
    <label>ID</label>
    <type>Text</type>
</CustomField>