force-app/main/default/objects/Ciclo_prepa__c/fields/ImportePagos__c.field-meta.xml
<CustomField>
    <fullName>ImportePagos__c</fullName>
    <description>es un campo formula que ayuda para el calculo de estatus de aspirante, NO BORRAR</description>
    <formula>Pago1__c  +  Pago2__c +  Pago3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe a Pagar Inscripción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>