force-app/main/default/objects/Ciclo_prepa__c/fields/Inscritos__c.field-meta.xml
<CustomField>
    <fullName>Inscritos__c</fullName>
    <formula>Pagado_Total__c +  Pagado_Parcia__c + PGT_Descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>