force-app/main/default/objects/Ciclo_prepa__c/fields/IPA_Promedio__c.field-meta.xml
<CustomField>
    <fullName>IPA_Promedio__c</fullName>
    <description>Inicio de Proceso de Admisión -&gt; Indica el promedio actual</description>
    <label>Promedio</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>