force-app/main/default/objects/Ciclo_prepa__c/fields/IPA_Semestre_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>IPA_Semestre_Ingreso__c</fullName>
    <description>Inicio de Proceso de Admisión -&gt; Indica el semestre en el que desea ingresar</description>
    <label>Semestre en el que desea ingresar</label>
    <length>20</length>
    <type>Text</type>
</CustomField>