force-app/main/default/objects/Ciclo_prepa__c/fields/Matricula__c.field-meta.xml
<CustomField>
    <fullName>Matricula__c</fullName>
    <externalId>true</externalId>
    <label>Matrícula</label>
    <length>20</length>
    <type>Text</type>
</CustomField>