force-app/main/default/objects/Ciclo_prepa__c/fields/Matriculado__c.field-meta.xml
<CustomField>
    <fullName>Matriculado__c</fullName>
    <formula>IF (Matricula__c &lt;&gt; NULL   &amp;&amp;  Aspirante_Desertor__c  = FALSE , 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>