force-app/main/default/objects/Ciclo_prepa__c/fields/Monto_descuento_asignados__c.field-meta.xml
<CustomField>
    <fullName>Monto_descuento_asignados__c</fullName>
    <formula>IF ( Monto_inscripcion__c &lt;= 0 &amp;&amp; Clave_Descuento__c &lt;&gt; NULL,  Pago_Inscripcion__c -  ImportePagos__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto descuento asignado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>