force-app/main/default/objects/Ciclo_prepa__c/fields/Monto_inscripcion__c.field-meta.xml
<CustomField>
    <fullName>Monto_inscripcion__c</fullName>
    <description>Monto descuento aplicado</description>
    <inlineHelpText>Monto descuento aplicado Inscripción</inlineHelpText>
    <label>Monto descuento aplicado</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>