force-app/main/default/objects/Ciclo_prepa__c/fields/MotivoSeleccion__c.field-meta.xml
<CustomField>
    <fullName>MotivoSeleccion__c</fullName>
    <description>Indica porqué selección prepa UPAEP</description>
    <label>Motivo de selección</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BUENA OPCION</fullName>
            </value>
            <value>
                <fullName>COSTO</fullName>
            </value>
            <value>
                <fullName>CUMPLE LO QUE BUSCO EN UNA UNIVERSIDAD</fullName>
            </value>
            <value>
                <fullName>FLEXIBILIDAD</fullName>
            </value>
            <value>
                <fullName>NIVEL ACADEMICO</fullName>
            </value>
            <value>
                <fullName>OTRO</fullName>
            </value>
            <value>
                <fullName>PRESTIGIO Y CALIDAD</fullName>
            </value>
            <value>
                <fullName>RECOMENDACION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>