force-app/main/default/objects/Ciclo_prepa__c/fields/Navegador_web__c.field-meta.xml
<CustomField>
    <fullName>Navegador_web__c</fullName>
    <description>Guarda el navegador que se esta usando para guardar el registro</description>
    <label>Navegador web</label>
    <type>TextArea</type>
</CustomField>