force-app/main/default/objects/Ciclo_prepa__c/fields/No_Plantel__c.field-meta.xml
<CustomField>
    <fullName>No_Plantel__c</fullName>
    <description>No. de Plantel de UNISOFT</description>
    <label>No. de Plantel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>