force-app/main/default/objects/Ciclo_prepa__c/fields/No_Sistema__c.field-meta.xml
<CustomField>
    <fullName>No_Sistema__c</fullName>
    <label>No. Sistema</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>