force-app/main/default/objects/Ciclo_prepa__c/fields/Nombre_Escuela__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Escuela__c</fullName>
    <formula>Escuela_Procedencia__r.Nombre_de_escuela__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de escuela</label>
    <type>Text</type>
</CustomField>