force-app/main/default/objects/Ciclo_prepa__c/fields/NoPrograma__c.field-meta.xml
<CustomField>
    <fullName>NoPrograma__c</fullName>
    <label>No. de Programa de interés</label>
    <type>TextArea</type>
</CustomField>