force-app/main/default/objects/Ciclo_prepa__c/fields/Numero_de_periodo__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_periodo__c</fullName>
    <description>Núnero de periodo</description>
    <label>Numero de periodo</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>