force-app/main/default/objects/Ciclo_prepa__c/fields/NumeroProvisional__c.field-meta.xml
<CustomField>
    <fullName>NumeroProvisional__c</fullName>
    <description>Campo temporal para carga inicial de datos</description>
    <label>Número Provisional UNISOFT</label>
    <length>15</length>
    <type>Text</type>
</CustomField>