force-app/main/default/objects/Ciclo_prepa__c/fields/Obs_Resolutivo_Becas__c.field-meta.xml
<CustomField>
    <fullName>Obs_Resolutivo_Becas__c</fullName>
    <label>Observaciones Resolutivo - Becas</label>
    <type>TextArea</type>
</CustomField>