force-app/main/default/objects/Ciclo_prepa__c/fields/ObsES_Beca__c.field-meta.xml
<CustomField>
    <fullName>ObsES_Beca__c</fullName>
    <description>Observaciones  de Estudio Socioeconomico - Becas</description>
    <label>Observaciones Est. Socioeconomico - Beca</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>