force-app/main/default/objects/Ciclo_prepa__c/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <description>Origen desde el cual se registro el interesado por primera vez</description>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atención Presencial</fullName>
            </value>
            <value>
                <fullName>CallCenter</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Directo</fullName>
            </value>
            <value>
                <fullName>Ferias y Eventos</fullName>
            </value>
            <value>
                <fullName>Inbox</fullName>
            </value>
            <value>
                <fullName>Inicia Proceso de Admisión</fullName>
            </value>
            <value>
                <fullName>Mayores Informes</fullName>
            </value>
            <value>
                <fullName>Mercadotecnia Social</fullName>
            </value>
            <value>
                <fullName>Teléfono</fullName>
            </value>
            <value>
                <fullName>Visitas</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>