force-app/main/default/objects/Ciclo_prepa__c/fields/Origenes_Interesado__c.field-meta.xml
<CustomField>
    <fullName>Origenes_Interesado__c</fullName>
    <description>Lista de origenes desde los cuales se ha registrado el interesado / aspirante</description>
    <label>Origenes Interesado</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mayores Informes</fullName>
            </value>
            <value>
                <fullName>Mercadotecnia Social</fullName>
            </value>
            <value>
                <fullName>Sesiones Informativas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>