force-app/main/default/objects/Ciclo_prepa__c/fields/Otra_Escuela__c.field-meta.xml
<CustomField>
    <fullName>Otra_Escuela__c</fullName>
    <description>Otra escuela de procedencia cuando no existe</description>
    <label>Otra escuela procedencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>