force-app/main/default/objects/Ciclo_prepa__c/fields/OtroParentesco__c.field-meta.xml
<CustomField>
    <fullName>OtroParentesco__c</fullName>
    <label>Otro parentesco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>