force-app/main/default/objects/Ciclo_prepa__c/fields/Otros_Cargos_Inscripcion__c.field-meta.xml
<CustomField>
    <fullName>Otros_Cargos_Inscripcion__c</fullName>
    <formula>IF( Periodo__c = &quot;OTOÑO 2018&quot;, Plantel_Relacion__r.OtrosCargosInscripcionOtono__c, IF( Periodo__c = &quot;PRIMAVERA 2018&quot;, Plantel_Relacion__r.OtrosCargosInscripcion_Prim__c , Plantel_Relacion__r.OtrosCargosInscripcion_Verano__c ) )</formula>
    <label>Otros Cargos Inscripción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>