force-app/main/default/objects/Ciclo_prepa__c/fields/Pagado_Parcia__c.field-meta.xml
<CustomField>
    <fullName>Pagado_Parcia__c</fullName>
    <formula>IF (( Pago_Inscripcion__c &gt; 0  &amp;&amp;  TotalPagadoAlDia__c &gt; 0  &amp;&amp;  Saldo_Pago_Inscripcion__c  &gt; 0 &amp;&amp;  Aspirante_Desertor__c = FALSE  ) , 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PGP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>