force-app/main/default/objects/Ciclo_prepa__c/fields/Pagado_Total__c.field-meta.xml
<CustomField>
    <fullName>Pagado_Total__c</fullName>
    <formula>IF (( Pago_Inscripcion__c &gt; 0  &amp;&amp;   TotalPagadoAlDia__c &gt; 0  &amp;&amp;   Saldo_Pago_Inscripcion__c &lt;= 0  &amp;&amp;   Aspirante_Desertor__c = FALSE  &amp;&amp;  Monto_inscripcion__c &lt;= 0 ), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PGT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>