force-app/main/default/objects/Ciclo_prepa__c/fields/Pago1__c.field-meta.xml
<CustomField>
    <fullName>Pago1__c</fullName>
    <label>Pago 1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>