force-app/main/default/objects/Ciclo_prepa__c/fields/Pago2__c.field-meta.xml
<CustomField>
    <fullName>Pago2__c</fullName>
    <label>Pago 2</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>