force-app/main/default/objects/Ciclo_prepa__c/fields/Pago3__c.field-meta.xml
<CustomField>
    <fullName>Pago3__c</fullName>
    <label>Pago 3</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>