force-app/main/default/objects/Ciclo_prepa__c/fields/Pago_Inscripcion__c.field-meta.xml
<CustomField>
    <fullName>Pago_Inscripcion__c</fullName>
    <formula>Cargo_InscripcionNI__c + Otros_Cargos_Inscripcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pago de Inscripción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>