force-app/main/default/objects/Ciclo_prepa__c/fields/PagoES_Becas__c.field-meta.xml
<CustomField>
    <fullName>PagoES_Becas__c</fullName>
    <label>Pago Est. Socioeconómico</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>