force-app/main/default/objects/Ciclo_prepa__c/fields/Pagos_reales_al_d_a__c.field-meta.xml
<CustomField>
    <fullName>Pagos_reales_al_d_a__c</fullName>
    <formula>TotalPagadoAlDia__c -  Monto_inscripcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pagos reales al día</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>