force-app/main/default/objects/Ciclo_prepa__c/fields/ParcialidadesVencidas__c.field-meta.xml
<CustomField>
    <fullName>ParcialidadesVencidas__c</fullName>
    <label>Parcialidades Vencidas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>