force-app/main/default/objects/Ciclo_prepa__c/fields/Parentesco__c.field-meta.xml
<CustomField>
    <fullName>Parentesco__c</fullName>
    <label>Parentesco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAPÁ</fullName>
            </value>
            <value>
                <fullName>MAMÁ</fullName>
            </value>
            <value>
                <fullName>OTRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>