force-app/main/default/objects/Ciclo_prepa__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <description>Perido de Ingreso</description>
    <label>Periodo de Ingreso</label>
    <length>100</length>
    <type>Text</type>
</CustomField>