force-app/main/default/objects/Ciclo_prepa__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>Persona</description>
    <label>Persona</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ciclos Prepa</relationshipLabel>
    <relationshipName>Ciclos_Prepa</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>