force-app/main/default/objects/Ciclo_prepa__c/fields/PGP_Descuento__c.field-meta.xml
<CustomField>
    <fullName>PGP_Descuento__c</fullName>
    <formula>IF (ISPICKVAL( Estatus_Admision__c , &apos;ASPIRANTE PAGO PARCIAL&apos;)  &amp;&amp;  Monto_inscripcion__c &gt; 0, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PGP Descuento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>