force-app/main/default/objects/Ciclo_prepa__c/fields/PGT_Descuento__c.field-meta.xml
<CustomField>
    <fullName>PGT_Descuento__c</fullName>
    <formula>IF (Pago_Inscripcion__c &gt; 0 &amp;&amp; TotalPagadoAlDia__c &gt; 0 &amp;&amp; Saldo_Pago_Inscripcion__c &lt;= 0 &amp;&amp; Aspirante_Desertor__c = False &amp;&amp; Monto_inscripcion__c &gt; 0 , 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PGD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>