force-app/main/default/objects/Ciclo_prepa__c/fields/Plantel__c.field-meta.xml
<CustomField>
    <fullName>Plantel__c</fullName>
    <description>Descripción del Plantel de UNISOFT</description>
    <label>Plantel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>