force-app/main/default/objects/Ciclo_prepa__c/fields/Plantel_nombre__c.field-meta.xml
<CustomField>
    <fullName>Plantel_nombre__c</fullName>
    <formula>No_Plantel__c&amp; &quot;-&quot; &amp; Plantel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plantel/nombre</label>
    <type>Text</type>
</CustomField>