force-app/main/default/objects/Ciclo_prepa__c/fields/Plantel_Relacion__c.field-meta.xml
<CustomField>
    <fullName>Plantel_Relacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relación Plantel</description>
    <label>Relación Plantel</label>
    <referenceTo>Carrera__c</referenceTo>
    <relationshipLabel>Ciclos Prepa</relationshipLabel>
    <relationshipName>Ciclos_Prepa</relationshipName>
    <type>Lookup</type>
</CustomField>