force-app/main/default/objects/Ciclo_prepa__c/fields/Por_Inscribir__c.field-meta.xml
<CustomField>
    <fullName>Por_Inscribir__c</fullName>
    <formula>Matriculado__c -  Inscritos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XINS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>