force-app/main/default/objects/Ciclo_prepa__c/fields/Por_Matricular__c.field-meta.xml
<CustomField>
    <fullName>Por_Matricular__c</fullName>
    <formula>EXS__c - Matriculado__c - DicNA__c - DicP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XMAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>