force-app/main/default/objects/Ciclo_prepa__c/fields/PorcentajeBeca1__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeBeca1__c</fullName>
    <label>Porcentaje Beca 1</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>