force-app/main/default/objects/Ciclo_prepa__c/fields/PorcentajeBeca2__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeBeca2__c</fullName>
    <label>Porcentaje Beca 2</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>