force-app/main/default/objects/Ciclo_prepa__c/fields/PorcentajeBeca3__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeBeca3__c</fullName>
    <label>Porcentaje Beca 3</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>