force-app/main/default/objects/Ciclo_prepa__c/fields/ProgramaInteres__c.field-meta.xml
<CustomField>
    <fullName>ProgramaInteres__c</fullName>
    <label>Programa de interés</label>
    <type>TextArea</type>
</CustomField>