force-app/main/default/objects/Ciclo_prepa__c/fields/Propietario__c.field-meta.xml
<CustomField>
    <fullName>Propietario__c</fullName>
    <description>Nombre de la persona quien está dando seguimiento</description>
    <label>Propietario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>