force-app/main/default/objects/Ciclo_prepa__c/fields/Prospecto_No_Procesado__c.field-meta.xml
<CustomField>
    <fullName>Prospecto_No_Procesado__c</fullName>
    <description>Motivo por el cual el Prospecto no fue convertido a Aspirante en UNISOFT</description>
    <inlineHelpText>Motivo por el cual el Prospecto no fue convertido a Aspirante en UNISOFT</inlineHelpText>
    <label>Prospecto No Procesado</label>
    <length>150</length>
    <type>Text</type>
</CustomField>