force-app/main/default/objects/Ciclo_prepa__c/fields/ProxCumpleanos__c.field-meta.xml
<CustomField>
    <fullName>ProxCumpleanos__c</fullName>
    <formula>Persona__r.ProxCumpleanos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Próximo Cumpleaños</label>
    <type>Date</type>
</CustomField>