force-app/main/default/objects/Ciclo_prepa__c/fields/REApellidoMaterno__c.field-meta.xml
<CustomField>
    <fullName>REApellidoMaterno__c</fullName>
    <label>RE - Apellido materno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>