force-app/main/default/objects/Ciclo_prepa__c/fields/REApellidoPaterno__c.field-meta.xml
<CustomField>
    <fullName>REApellidoPaterno__c</fullName>
    <label>RE - Apellido paterno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>