force-app/main/default/objects/Ciclo_prepa__c/fields/REconomico__c.field-meta.xml
<CustomField>
    <fullName>REconomico__c</fullName>
    <label>Responsable económico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>