force-app/main/default/objects/Ciclo_prepa__c/fields/Redes_Sociales__c.field-meta.xml
<CustomField>
    <fullName>Redes_Sociales__c</fullName>
    <label>Redes Sociales</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Diseño</fullName>
            </value>
            <value>
                <fullName>App UPAEP</fullName>
            </value>
            <value>
                <fullName>Boletin EC</fullName>
            </value>
            <value>
                <fullName>Econsulta</fullName>
            </value>
            <value>
                <fullName>Educaedu</fullName>
            </value>
            <value>
                <fullName>El Universal</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Expansión</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Facebook-Abierta</fullName>
            </value>
            <value>
                <fullName>Facebook-Angelopolis</fullName>
            </value>
            <value>
                <fullName>Facebook-Atlixco</fullName>
            </value>
            <value>
                <fullName>Facebook-Cholula</fullName>
            </value>
            <value>
                <fullName>Facebook-Cineminutos</fullName>
            </value>
            <value>
                <fullName>Facebook-Interprepas</fullName>
            </value>
            <value>
                <fullName>Facebook Lic. Ciencias Políticias</fullName>
            </value>
            <value>
                <fullName>Facebook Lic. en Idiomas</fullName>
            </value>
            <value>
                <fullName>Facebook Lic. Humanidades</fullName>
            </value>
            <value>
                <fullName>Facebook Lic. Ing Ambiental</fullName>
            </value>
            <value>
                <fullName>Facebook Lic. Ing Autopartes</fullName>
            </value>
            <value>
                <fullName>Facebook-San Martin</fullName>
            </value>
            <value>
                <fullName>Facebook-Santa Ana</fullName>
            </value>
            <value>
                <fullName>Facebook-Sur</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Google Display</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Google Youtube</fullName>
            </value>
            <value>
                <fullName>Hispavista</fullName>
            </value>
            <value>
                <fullName>Jungla de Mariano</fullName>
            </value>
            <value>
                <fullName>Kpta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>