force-app/main/default/objects/Ciclo_prepa__c/fields/REFechaNacimiento__c.field-meta.xml
<CustomField>
    <fullName>REFechaNacimiento__c</fullName>
    <label>RE - Fecha de nacimiento</label>
    <type>Date</type>
</CustomField>