force-app/main/default/objects/Ciclo_prepa__c/fields/RENombre__c.field-meta.xml
<CustomField>
    <fullName>RENombre__c</fullName>
    <label>RE - Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>