force-app/main/default/objects/Ciclo_prepa__c/fields/Resultados_Examen_Admisi_n__c.field-meta.xml
<CustomField>
    <fullName>Resultados_Examen_Admisi_n__c</fullName>
    <label>Resultados Examen Admisión</label>
    <type>TextArea</type>
</CustomField>