force-app/main/default/objects/Ciclo_prepa__c/fields/Saldo_Pago_Inscripcion__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Pago_Inscripcion__c</fullName>
    <description>Importe de Pagos - Total Pagado al día</description>
    <formula>Pago_Inscripcion__c  - TotalPagadoAlDia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo de Pago de Inscripción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>