force-app/main/default/objects/Ciclo_prepa__c/fields/Saldo_Vencido__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Vencido__c</fullName>
    <label>Saldo Vencido</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>