force-app/main/default/objects/Ciclo_prepa__c/fields/Secuencia_Alumno__c.field-meta.xml
<CustomField>
    <fullName>Secuencia_Alumno__c</fullName>
    <externalId>true</externalId>
    <label>Secuencia Unisoft Alumno</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>