force-app/main/default/objects/Ciclo_prepa__c/fields/Semestre_actual__c.field-meta.xml
<CustomField>
    <fullName>Semestre_actual__c</fullName>
    <label>Semestre actual</label>
    <length>10</length>
    <type>Text</type>
</CustomField>