force-app/main/default/objects/Ciclo_prepa__c/fields/Sistema__c.field-meta.xml
<CustomField>
    <fullName>Sistema__c</fullName>
    <label>Sistema</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BACHILLERATO TEHUACAN</fullName>
            </value>
            <value>
                <fullName>BACHILLERATO PUEBLA</fullName>
            </value>
            <value>
                <fullName>BACHILLERATO TLAXCALA</fullName>
            </value>
            <value>
                <fullName>BACHILLERATO MIXTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>