force-app/main/default/objects/Ciclo_prepa__c/fields/Solicita_Beca__c.field-meta.xml
<CustomField>
    <fullName>Solicita_Beca__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si solicita beca</description>
    <label>Solicita Beca</label>
    <type>Checkbox</type>
</CustomField>