force-app/main/default/objects/Ciclo_prepa__c/fields/TelefonoFijo__c.field-meta.xml
<CustomField>
    <fullName>TelefonoFijo__c</fullName>
    <label>Teléfono Fijo</label>
    <type>Phone</type>
</CustomField>