force-app/main/default/objects/Ciclo_prepa__c/fields/Tipo_Des_Unisoft__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Des_Unisoft__c</fullName>
    <formula>TEXT( Clave_Descuento__r.Tipo_Des_Unisoft__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Descuento Unisoft</label>
    <type>Text</type>
</CustomField>