force-app/main/default/objects/Ciclo_prepa__c/fields/Total_Aspirantes__c.field-meta.xml
<CustomField>
    <fullName>Total_Aspirantes__c</fullName>
    <formula>IF ( (RecordType.Name = &apos;Aspirante&apos;  || RecordType.Name = &apos;Alumno&apos;)  &amp;&amp;  Aspirante_Desertor__c = false, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>