force-app/main/default/objects/Ciclo_prepa__c/fields/Total_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Total_Descuento__c</fullName>
    <formula>Saldo_Pago_Inscripcion__c - (Saldo_Pago_Inscripcion__c * Clave_Descuento__r.Insc_Porcentaje__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total con Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>