force-app/main/default/objects/Ciclo_prepa__c/fields/TotalPagadoAlDia__c.field-meta.xml
<CustomField>
    <fullName>TotalPagadoAlDia__c</fullName>
    <description>Viene de Unisoft</description>
    <label>Abonos Totales</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>