force-app/main/default/objects/Ciclo_prepa__c/fields/UltimaModificacionDescuentos__c.field-meta.xml
<CustomField>
    <fullName>UltimaModificacionDescuentos__c</fullName>
    <label>Fecha Última Modificación Descuentos</label>
    <type>DateTime</type>
</CustomField>