force-app/main/default/objects/Ciclo_prepa__c/fields/UltimaModificacionDictamen__c.field-meta.xml
<CustomField>
    <fullName>UltimaModificacionDictamen__c</fullName>
    <label>Fecha Última Modificación Dictamen</label>
    <type>DateTime</type>
</CustomField>