force-app/main/default/objects/Ciclo_prepa__c/fields/UltimaModificacionDuplicado__c.field-meta.xml
<CustomField>
    <fullName>UltimaModificacionDuplicado__c</fullName>
    <label>Fecha Última Modificación Duplicado</label>
    <type>DateTime</type>
</CustomField>