force-app/main/default/objects/Ciclo_prepa__c/fields/UltimaModificacionExamen__c.field-meta.xml
<CustomField>
    <fullName>UltimaModificacionExamen__c</fullName>
    <description>Fecha Última Modificación de Examen de Admisión</description>
    <label>Fecha Última Modificación Examen</label>
    <type>DateTime</type>
</CustomField>