force-app/main/default/objects/Ciclo_prepa__c/fields/UltimaModificacionInteresado__c.field-meta.xml
<CustomField>
    <fullName>UltimaModificacionInteresado__c</fullName>
    <label>Fecha Última Modificación Interesado</label>
    <type>DateTime</type>
</CustomField>