force-app/main/default/objects/Ciclo_prepa__c/fields/UltimaModificacionPeriodo__c.field-meta.xml
<CustomField>
    <fullName>UltimaModificacionPeriodo__c</fullName>
    <label>Fecha Última Modificación Periodo</label>
    <type>DateTime</type>
</CustomField>