force-app/main/default/objects/Ciclo_prepa__c/fields/UltimaModificacionPlantel__c.field-meta.xml
<CustomField>
    <fullName>UltimaModificacionPlantel__c</fullName>
    <description>Fecha Última Modificación de Plantel</description>
    <label>Fecha Última Modificación Plantel</label>
    <type>DateTime</type>
</CustomField>