force-app/main/default/objects/Ciclo_prepa__c/fields/UltimaModificacionPromedio__c.field-meta.xml
<CustomField>
    <fullName>UltimaModificacionPromedio__c</fullName>
    <label>Fecha Última Modificación Promedio</label>
    <type>DateTime</type>
</CustomField>