force-app/main/default/objects/Ciclo_prepa__c/fields/Uuid__c.field-meta.xml
<CustomField>
    <fullName>Uuid__c</fullName>
    <label>UUID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>