force-app/main/default/objects/Ciclo_prepa__c/recordTypes/Alumno.recordType-meta.xml
<RecordType>
    <fullName>Alumno</fullName>
    <active>true</active>
    <label>Alumno</label>
</RecordType>