force-app/main/default/objects/Ciclo_prepa__c/recordTypes/Aspirante.recordType-meta.xml
<RecordType>
    <fullName>Aspirante</fullName>
    <active>true</active>
    <label>Aspirante</label>
</RecordType>