force-app/main/default/objects/Ciclo_prepa__c/recordTypes/Egresado.recordType-meta.xml
<RecordType>
    <fullName>Egresado</fullName>
    <active>true</active>
    <description>Egresado</description>
    <label>Egresado</label>
</RecordType>