force-app/main/default/objects/Ciclo_prepa__c/recordTypes/Prospecto.recordType-meta.xml
<RecordType>
    <fullName>Prospecto</fullName>
    <active>true</active>
    <description>Prospecto</description>
    <label>Prospecto</label>
</RecordType>